Corrected some problems with strings containing SQL as well as attributes

--- a/LineCounter/todo.txt
+++ b/LineCounter/todo.txt
@@ -1,8 +1,12 @@
 ﻿Bugs/features
 
 Check problems in code!
+/:/ experiment: perhaps Roslyn would make things better?
+/:? experiment: make your own parse tree, or use ANTLR?
 
-1? 
+1? badly named fields?
+2? methods or properties whose names start with lowercase?
+3? Decimal/String/Char/Int32 instead of normal notation?
 
 
 
