--- a/LineCounter/todo.txt
+++ b/LineCounter/todo.txt
@@ -5,9 +5,15 @@ Check problems in code!
 /:/ experiment: perhaps Roslyn would make things better?
 /:? experiment: make your own parse tree, or use ANTLR?
 
+// van 10
+7:19-29 CODE  = +19 = 21:19=>
+NEXT: 10 Roslyn, 10 CODE 10 Antlr 10 coding. (evening?)
+
 1? badly named fields?
 2? methods or properties whose names start with lowercase?
 4? Repeated code?
+
+
 
 
 
