--- a/LineCounter/todo.txt
+++ b/LineCounter/todo.txt
@@ -1,6 +1,7 @@
 ﻿Bugs/features
 
 1) Continue the cycle: build, run unit tests, test self, test others, release
+2) check the release: 
 2) goal 1: also give directory to distinguish between Program.cs and Program.cs
 3) goal 2: add someString to correctly count multiline strings
 4) become resistant against {} records and inner classes
