Met problematische voorbeeldcode...

--- a/LineCounter/todo.txt
+++ b/LineCounter/todo.txt
@@ -1,5 +1,9 @@
 ﻿Bugs/features
 
+    public List<Phone> SearchPhone(string input) => new(sqlUtils.GetPhones($"SELECT * FROM phones INNER JOIN brands ON phones.BrandId = brands.Id " +
+        $"WHERE Brand LIKE '%{input}%' OR Type LIKE '%{input}%' OR Description LIKE '%{input}%'"));
+
+
 1) Continue the cycle: build, run unit tests, test self, test others, release
 2) check the release: 
 2) goal 1: also give directory to distinguish between Program.cs and Program.cs
